--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
@@ -24,3 +24,15 @@
     padding-bottom: 20px;
     padding-top: 20px;
 }
+
+.load-more-row{
+    display: flex;
+    justify-content: center;
+    padding-top: 32px;
+    .load-more-button{
+        border-radius: 8px;
+        border: 1px solid #6e6e6e;
+        background-color: #fdfdfd;
+        width: 100%;
+    }
+}
