--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
@@ -12,6 +12,9 @@
           [width]="300">
       </youtube-player>
 </div>  
-<div #loadMoreButton class="load-more" *ngIf="displayLoadMore">
-  <button (click)="loadMore(loadMoreButton)">Load More</button>
+<div #loadMoreButton class="load-more-row" *ngIf="displayLoadMore">
+  <button mat-button class="load-more-button"(click)="loadMore(loadMoreButton)">Load More</button>
 </div>
+<ng-template #showDisclaimer>
+  <div *ngIf="!isPreview">There are currently no videos associated with this incident.</div>
+</ng-template>
