--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.scss
@@ -25,10 +25,14 @@
     width: 100%;
 }
 
-.load-more-but {
-    width: 100%;
-    height: 48px;
-    border-radius: 10;
-    border-color: red;
-    background-color: rgba(255, 255, 255, 0);
+.load-more-row{
+    display: flex;
+    justify-content: center;
+    padding-top: 32px;
+    .load-more-button{
+        border-radius: 8px;
+        border: 1px solid #6e6e6e;
+        background-color: #fdfdfd;
+        width: 100%;
+    }
 }
