--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
@@ -57,6 +57,11 @@
 :host ::ng-deep .mat-tab-label {
     height: 3rem !important;
     min-width: 8rem !important;
+    border: 1px solid #003366;
+    box-sizing: border-box;
+    border-radius: 0.8rem;
+    background-color: #003366 !important;
+    color: #fdfdfd !important;
 }
 
 :host ::ng-deep .mat-tab-content {
