--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.html
@@ -3,8 +3,7 @@
     <div class="header-row">
       <h1>Images and Video Gallery</h1>
     </div>
-          <div *ngIf="videos && videos.length || images && images.length;">
-          <mat-tab-group [selectedIndex]="selectedIndex">
+          <mat-tab-group>
             <mat-tab id="allMedia" label="All Media">
               <incident-gallery-all-media-mobile [incident]="incident"></incident-gallery-all-media-mobile>
             </mat-tab>
@@ -15,7 +14,6 @@
             <incident-gallery-videos-mobile [incident]="incident"></incident-gallery-videos-mobile>
           </mat-tab> 
           </mat-tab-group>
-          </div>
     </div>
 </div>
 
