--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
@@ -57,23 +57,10 @@
 :host ::ng-deep .mat-tab-label {
     height: 3rem !important;
     min-width: 8rem !important;
-    border: 1px solid #003366;
-    box-sizing: border-box;
-    border-radius: 0.8rem;
-    background-color: #003366 !important;
-    color: #fdfdfd !important;
 }
 
 :host ::ng-deep .mat-tab-content {
     color: #003366 !important;
-}
-
-:host ::ng-deep .mat-tab-label.mat-tab-label-selected {
-    border: 1px solid #003366;
-    box-sizing: border-box;
-    border-radius: 0.8rem;
-    background-color: #003366 !important;
-    color: #fdfdfd !important;
 }
 
 /* Styles for the active tab label */
@@ -97,4 +84,10 @@
     border-radius: 0.8rem;
 
 }
+
+::ng-deep.mat-tab-label.mat-tab-label-active:not(.mat-tab-disabled),
+::ng-deep.mat-tab-label.mat-tab-label-active.cdk-focused:not(.mat-tab-disabled) {
+  opacity: 1;
+}
+
 
