--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel-mobile/incident-gallery-panel-mobile.component.scss
@@ -57,6 +57,8 @@
 :host ::ng-deep .mat-tab-label {
     height: 3rem !important;
     min-width: 8rem !important;
+    flex-basis: 0;
+    flex-grow: 1;
 }
 
 :host ::ng-deep .mat-tab-content {
