--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
@@ -17,5 +17,5 @@
 </div>
 </div>
 <ng-template #showDisclaimer>
-  <div *ngIf="!isPreview">There are currently no videos associated with this incident.</div>
+  <div class="disclaimer" *ngIf="!isPreview">There are currently no videos associated with this incident.</div>
 </ng-template>
