--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
@@ -18,7 +18,7 @@
     </lightgallery>
     </div>
 
-     <div *ngIf="item.type==='video'">
+     <div class="youtube-player" *ngIf="item.type==='video'">
       <div class="title-row">{{item.title}}</div>
       <div class="date-row">{{convertToMobileFormat(item.convertedDate)}}</div>
       <youtube-player
@@ -26,8 +26,8 @@
           videoId={{convertToYoutubeId(item.href)}}
           suggestedQuality="highres"
           [startSeconds]="1"
-          [height]="175"
-          [width]="300">
+          [height]="250"
+          [width]="400">
       </youtube-player>
     </div>
   </div>
@@ -35,10 +35,8 @@
     <button mat-button class="load-more-button"(click)="loadMore(loadMoreButton)">Load More</button>
   </div>
 </div>
-<div class="disclaimer">
   <ng-template #showDisclaimer>
-    <div *ngIf="!isPreview">There are currently no images or videos associated with this incident.</div>
+    <div class="disclaimer" *ngIf="!isPreview">There are currently no images or videos associated with this incident.</div>
 </ng-template>
-</div> 
 
 
