--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.html
@@ -1,34 +1,10 @@
 <div class="content-panel-stack" *ngIf="displayVideosAndImages && displayVideosAndImages.length; else showDisclaimer">
 <div class="media" *ngFor="let item of displayVideosAndImages">
-
     <div *ngIf="item.type==='image'">
-      <div class="title-row">{{item.title}}</div>
-      <div class="date-row">{{convertToMobileFormat(item.convertedDate)}}</div>
-      <lightgallery [settings]="settings" [onBeforeSlide]="onBeforeSlide" [onInit]="onInit" class="gallery-container">
-        <a
-            [attr.data-index]="i"
-            data-lg-size="480-475-480, 800-791-800, 1406-1390"
-            class="gallery-item"
-            [href]="item.href"
-            [data-src]="item.href"
-            [data-responsive]="item.href + ' 800'"
-            style="padding: 5px;">
-            <img [id]="i + '-img-thumb'" width="150" alt="Image" class="img-responsive" [src]="item.thumbnail" (error)="handleImageFallback(item, i)"/>
-        </a>
-    </lightgallery>
+      <image-panel [item]="item" [settings]="settings" [onBeforeSlide]="onBeforeSlide" [onInit]="onInit" [i]="i"></image-panel>
     </div>
-
-     <div class="youtube-player" *ngIf="item.type==='video'">
-      <div class="title-row">{{item.title}}</div>
-      <div class="date-row">{{convertToMobileFormat(item.convertedDate)}}</div>
-      <youtube-player
-          style="padding: 5px;"
-          videoId={{convertToYoutubeId(item.href)}}
-          suggestedQuality="highres"
-          [startSeconds]="1"
-          [height]="250"
-          [width]="400">
-      </youtube-player>
+     <div *ngIf="item.type==='video'">
+      <video-panel [item]="item"></video-panel>
     </div>
   </div>
   <div #loadMoreButton class="load-more-row" *ngIf="displayLoadMore">
