--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-all-media-mobile/incident-gallery-all-media-mobile.component.scss
@@ -1,24 +1,3 @@
-.title-row {
-    width: 182px;
-    height: 24px;
-    font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
-    font-weight: 500;
-    color: #333333;
-    text-align: left;
-    line-height: 24px;
-    padding-left: 5px;
-}
-
-.date-row {
-    height: 24px;
-    font-family: "HelveticaNeue", "Helvetica Neue", sans-serif;
-    color: #6e6e6e;
-    text-align: left;
-    line-height: 24px;
-    padding-bottom: 20px;
-    padding-left: 5px;
-}
-
 .media {
     padding-bottom: 20px;
     padding-top: 20px;
@@ -30,6 +9,7 @@
     display: flex;
     justify-content: center;
     padding-top: 32px;
+    margin-bottom: 96px;
     .load-more-button{
         border-radius: 8px;
         border: 1px solid #6e6e6e;
