--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: center;
     padding-top: 32px;
+    margin-bottom: 96px;
     .load-more-button{
         border-radius: 8px;
         border: 1px solid #6e6e6e;
