--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-videos-mobile/incident-gallery-videos-mobile.component.html
@@ -1,16 +1,6 @@
 <div class="content-panel-stack" *ngIf="videos && videos.length; else showDisclaimer">
 <div class="media"*ngFor="let item of videos">
-
-      <div class="title-row">{{item.title}}</div>
-      <div class="date-row">{{convertToMobileFormat(item.convertedDate)}}</div>
-      <youtube-player
-          style="padding: 5px;"
-          videoId={{convertToYoutubeId(item.href)}}
-          suggestedQuality="highres"
-          [startSeconds]="1"
-          [height]="175"
-          [width]="300">
-      </youtube-player>
+  <video-panel [item]="item"></video-panel>
 </div>  
 <div #loadMoreButton class="load-more-row" *ngIf="displayLoadMore">
   <button mat-button class="load-more-button"(click)="loadMore(loadMoreButton)">Load More</button>
