--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel-mobile/incident-maps-panel-mobile.component.scss
@@ -46,6 +46,7 @@
                 display: flex;
                 justify-content: center;
                 padding-top: 32px;
+                margin-bottom: 96px;
                 .load-more-button{
                     border-radius: 8px;
                     border: 1px solid #6e6e6e;
