--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -2,7 +2,7 @@
   <div class="mobile-header" *ngIf="hideOnMobileView()">
     <span class="material-icons" (click)="backToMap()">arrow_back</span>
     <span>Wildfire</span>
-    <span class="material-icons" (click)="shareContent()">share</span>  
+    <span class="material-icons" (click)="shareContent()">share</span>
   </div>
   <div id="map" class="map-container" *ngIf="hideOnMobileView()">
   </div>
@@ -35,8 +35,8 @@
         <h4>Active Evacuation Orders and Alerts</h4>
         <div class="evac-list" *ngFor="let evac of evacOrders">
           <mat-icon [class]="evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" style="text-decoration: none;">{{ evac.orderAlertStatus === 'Alert' ? 'warning' : 'error' }} </mat-icon>
-          <a *ngIf="evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" [href]="evac.uri" target="_blank" rel="noopener">{{evac.eventName}} {{ evac.orderAlertStatus }}</a>
-          <div *ngIf="!evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'">{{evac.eventName}} {{ evac.orderAlertStatus }}</div>
+          <a *ngIf="evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" [href]="evac.uri" target="_blank" rel="noopener">{{ evac.orderAlertStatus }}: {{evac.eventName}}</a>
+          <div *ngIf="!evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'">{{ evac.orderAlertStatus }}: {{evac.eventName}}</div>
           <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
         </div>
       </div>
