Move tab bar to bottom on mobile

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -46,7 +46,7 @@
                     <mat-icon>chevron_right</mat-icon>
                 </div>
             </div>
-            <div class="sub-title">
+            <div>
               <div>Fire Size</div>
               <div>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</div>
             </div>
