--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -50,14 +50,14 @@
   background: #f3f6f9;
   @media (max-width: 768px) {
       background: white !important;
-  }  
+  }
 }
 
 :host ::ng-deep .mat-tab-label {
   color: #003366;
   @media (max-width: 768px) {
     color: #242424 !important;
-  }  
+  }
 }
 
 :host ::ng-deep .mat-ink-bar {
@@ -65,7 +65,7 @@
   height: 4px !important;
   @media (max-width: 768px) {
     background-color: #242424 !important;
-  }  
+  }
 }
 
 :host ::ng-deep .mat-tab-label-active {
@@ -85,11 +85,14 @@
 
 :host ::ng-deep .mat-tab-header {
   top: -1px;
-  z-index: 1000;
+  z-index: 9999999999999;
   position: sticky;
   position: -webkit-sticky; /* macOS/iOS Safari */
   background-color: #f3f6f9;
   @media (max-width: 768px) {
     background-color: white !important;
-  }  
+    //position: fixed !important;
+    width: 100% !important;
+    bottom: 0px !important;
+  }
 }
