Update fonts to BC Sans

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
@@ -27,7 +27,7 @@
                 height: 33px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #252628;
                 text-align: left;
@@ -39,7 +39,7 @@
                 height: 24px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #333333;
                 text-align: left;
@@ -69,7 +69,7 @@
             }
 
             .sub-content {
-                font-family: "HelveticaNeue", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 color: #6e6e6e;
                 text-align: left;
                 line-height: 24px;
@@ -102,6 +102,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                width: 160px;
             }
 
             .current-resources{
