--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-overview-panel-mobile/incident-overview-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-overview-panel-mobile/incident-overview-panel-mobile.component.scss
@@ -7,7 +7,7 @@
             height: 33px;
             background-color: rgba(255, 255, 255, 0);
             box-sizing: border-box;
-            font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+            font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
             font-weight: 500;
             color: #252628;
             text-align: left;
