Location styling adjustments

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -89,13 +89,13 @@
         <div class="content-panel-stack">
             <h1>Location</h1>
             <div *ngIf="incident.incidentLocation">
-                <div class="sub-title" style="color:#2c2c2c"> Description</div>
+                <div class="sub-title" style="color:#333333"> Description</div>
                 <div class="sub-content">
                     {{incident.incidentLocation}}
                 </div>
             </div>
             <div *ngIf="incident.traditionalTerritoryDetail">
-                <div class="sub-title" style="color:#2c2c2c"> Traditional Territory</div>
+                <div class="sub-title" style="color:#333333"> Traditional Territory</div>
                 <div class="sub-content">
                     {{incident.traditionalTerritoryDetail}}
                 </div>
