WFNEWS-1049 non compliance (#780)
* Prevent non-out in out count, fix area calc

Prevent calculating area from previous year fires into current year fires that may have carried over.

* WFNEWS-1049 non compliance fixes

* Move tab bar to bottom on mobile

* Update fonts to BC Sans

* Contact info margins

* Location styling adjustments

* Padding adjustment, floating tab bar adjustment

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.html
@@ -4,7 +4,7 @@
       <incident-header-panel [incident]="incident" [evacOrders]="evacOrders" [extent]="extent"></incident-header-panel>
     </div>
     <div>
-      <mat-tab-group mat-stretch-tabs>
+      <mat-tab-group mat-stretch-tabs [headerPosition]="hideOnMobileView() ? 'below' : 'above'">
         <mat-tab label="Overview">
           <incident-info-panel *ngIf="!hideOnMobileView()"[incident]="incident" [evacOrders]="evacOrders" [areaRestrictions]="areaRestrictions"></incident-info-panel>
           <incident-info-panel-mobile *ngIf="hideOnMobileView()" [incident]="incident" [evacOrders]="evacOrders" [areaRestrictions]="areaRestrictions"></incident-info-panel-mobile>
