--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.html
@@ -11,9 +11,9 @@
       <div>
         <div class="content-panel-stack">
             <h1>Summary</h1>
-            <h4 >Stage of Control</h4>
+            <h4>Stage of Control</h4>
             <div class="sub-title">
-                <div *ngIf="incident.fireOfNoteInd"><img class="icon" height="22" width="22" src="/assets/images/local_fire_department.png" alt="local_fire_department">Wildfire Of Note</div>
+                <div *ngIf="incident.fireOfNoteInd">Wildfire Of Note</div>
                 <div style="display: flex; align-items: baseline;">
                     <span *ngIf="!incident.fireOfNoteInd" class="circle-icon {{incident.stageOfControlCode}}"></span>
                     <span>{{getStageOfControlLabel(incident.stageOfControlCode)}}</span>
@@ -21,19 +21,19 @@
             </div>
             <div class="current-resources" *ngIf="incident.wildfireCrewResourcesInd || incident.wildfireAviationResourceInd || incident.incidentMgmtCrewRsrcInd || incident.heavyEquipmentResourcesInd || incident.structureProtectionRsrcInd">
                 <h4>Current Resources</h4>
-                <div *ngIf="incident.wildfireCrewResourcesInd"> 
+                <div *ngIf="incident.wildfireCrewResourcesInd">
                     <img class="image-size" src="../../../assets/images/svg-icons/wildfire-crews-mobile.svg" alt="Wildfire Crews" />
                     Wildfire Crews
                 </div>
-                <div *ngIf="incident.wildfireAviationResourceInd"> 
+                <div *ngIf="incident.wildfireAviationResourceInd">
                     <img class="image-size" src="../../../assets/images/svg-icons/aviation-mobile.svg" alt="Aviation" />
                     Aviation Crews
                 </div>
-                <div *ngIf="incident.incidentMgmtCrewRsrcInd"> 
+                <div *ngIf="incident.incidentMgmtCrewRsrcInd">
                     <img class="image-size" src="../../../assets/images/svg-icons/incident-management-teams-mobile.svg" alt="Incident Management Team" />
                     Incident Management Teams
                 </div>
-                <div *ngIf="incident.heavyEquipmentResourcesInd"> 
+                <div *ngIf="incident.heavyEquipmentResourcesInd">
                     <img class="image-size" src="../../../assets/images/svg-icons/heavy_equipment-mobile.svg" alt="Heavy Equipment" />
                     Heavy Equipment
                 </div>
@@ -46,6 +46,10 @@
                     <mat-icon>chevron_right</mat-icon>
                 </div>
             </div>
+            <div>
+              <div>Fire Size</div>
+              <div>{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</div>
+            </div>
             <div class="divider"></div>
         </div>
 
@@ -53,7 +57,7 @@
             <h1>Stage of Control</h1>
             <div *ngIf="incident.fireOfNoteInd">
                 <div class="sub-title">
-                    <h4><img class="icon" height="22" width="22" src="/assets/images/local_fire_department.png" alt="local_fire_department">Wildfire Of Note</h4>
+                    <h4><img class="icon" style="padding-right: 8px !important;" height="22" width="22" src="/assets/images/local_fire_department.png" alt="local_fire_department">Wildfire Of Note</h4>
                 </div>
                 <div class="sub-content">
                     This wildfire is highly visible or poses a potential threat to public safety.
@@ -62,7 +66,7 @@
             <div>
                 <div class="sub-title">
                     <span *ngIf="!incident.fireOfNoteInd" class="circle-icon {{incident.stageOfControlCode}}"></span>
-                    <h4>{{getStageOfControlLabel(incident.stageOfControlCode)}}</h4>                    
+                    <h4>{{getStageOfControlLabel(incident.stageOfControlCode)}}</h4>
                 </div>
                 <div class="sub-content" style="display: flex; align-items: baseline;">
                     {{getStageOfControlDescription(incident.stageOfControlCode)}}
@@ -73,7 +77,7 @@
 
         <div class="content-panel-stack">
             <h1>Fire Size</h1>
-            <div class="sub-content" style="color:#3e4347; display: flex; align-items: baseline;">{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares 
+            <div class="sub-content" style="color:#252628; display: flex; align-items: baseline;">{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares
                 <button mat-icon-button [matTooltip]="getTooltipText()" #tooltip="matTooltip" (click)="tooltip.toggle()"><mat-icon>help_outline</mat-icon></button>
             </div>
             <div class="sub-content">
@@ -85,13 +89,13 @@
         <div class="content-panel-stack">
             <h1>Location</h1>
             <div *ngIf="incident.incidentLocation">
-                <div class="sub-title" style="color:#2c2c2c"> Description</div>
+                <div class="sub-title" style="color:#333333"> Description</div>
                 <div class="sub-content">
                     {{incident.incidentLocation}}
                 </div>
             </div>
             <div *ngIf="incident.traditionalTerritoryDetail">
-                <div class="sub-title" style="color:#2c2c2c"> Traditional Territory</div>
+                <div class="sub-title" style="color:#333333"> Traditional Territory</div>
                 <div class="sub-content">
                     {{incident.traditionalTerritoryDetail}}
                 </div>
@@ -234,9 +238,9 @@
         <div class="content-panel-stack">
             <h1>Contact Us</h1>
             <div>
-                <div style="display: flex;"><span class="material-icons-outlined" style="padding-right: 10px;">badge</span><span>{{convertToFireCentreDescription(incident.contactOrgUnitIdentifer || incident.fireCentreName || incident.fireCentreCode || incident.fireCentre)}}</span></div>
-                <div style="display: flex;"><span class="material-icons-outlined" style="padding-right: 10px;">email</span><span>{{incident.contactEmailAddress}}</span></div>
-                <div style="display: flex;"><span class="material-icons" style="padding-right: 10px;">call</span><span>{{incident.contactPhoneNumber}}</span></div>
+                <div style="display: flex; margin-bottom: 5px;"><span class="material-icons-outlined" style="padding-right: 10px;">badge</span><span>{{convertToFireCentreDescription(incident.contactOrgUnitIdentifer || incident.fireCentreName || incident.fireCentreCode || incident.fireCentre)}}</span></div>
+                <div style="display: flex; margin-bottom: 5px;"><span class="material-icons-outlined" style="padding-right: 10px;">email</span><span>{{incident.contactEmailAddress}}</span></div>
+                <div style="display: flex; margin-bottom: 5px;"><span class="material-icons" style="padding-right: 10px;">call</span><span>{{incident.contactPhoneNumber}}</span></div>
             </div>
             <div style="display: flex; justify-content: space-between; padding-top: 24px;">
                 <button mat-button class="mobile-button" (click)="callFireCentre(incident.contactPhoneNumber)">
