--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel-mobile/incident-info-panel-mobile.component.scss
@@ -27,38 +27,41 @@
                 height: 33px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #252628;
                 text-align: left;
                 line-height: 33px;
             }
-        
+
             h4 {
                 font-size: 16px;
                 height: 24px;
                 background-color: rgba(255, 255, 255, 0);
                 box-sizing: border-box;
-                font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 font-weight: 500;
                 color: #333333;
                 text-align: left;
                 line-height: 24px;
+                margin: 0px;
             }
-    
+
             .sub-title{
+                font-family: "BCSans", "Noto Sans", Verdana, Arial, sans-serif;
                 display: flex;
                 align-items: baseline;
                 color: #6e6e6e;
                 text-align: left;
                 line-height: 24px;
+                padding-bottom: 8px;
                 div {
                     margin-right: 38px;
                   }
                 div:last-child{
                     margin-right: 0;
                 }
-                  
+
             }
 
             .image-size {
@@ -68,11 +71,10 @@
             }
 
             .sub-content {
-                font-family: "HelveticaNeue", "Helvetica Neue", sans-serif;
+                font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
                 color: #6e6e6e;
                 text-align: left;
                 line-height: 24px;
-                padding-bottom: 10px;
             }
 
             .evac-order-card{
@@ -101,12 +103,15 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                width: 170px;
             }
-    
+
             .current-resources{
                 color: #6e6e6e;
                 text-align: left;
                 line-height: 24px;
+                margin-top: 16px;
+                margin-bottom: 16px;
                 div{
                     display: flex;
                     align-items: center;
@@ -116,7 +121,7 @@
                     color:#242424;
                 }
             }
-    
+
             .content-panel-subtitle{
                 font-size: 16px;
                 text-align: left;
@@ -145,7 +150,7 @@
             .icon{
                 padding-right: 16px;
             }
-            
+
             .header-row {
                 .header-button-container {
                     .print-button {
@@ -168,7 +173,7 @@
     background-color:#6e6e6e !important;
     color: #fdfdfd !important;
     border-radius: 10px !important;
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25) !important; 
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25) !important;
   }
 
   .circle-icon{
