Reusable scroll to top button

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -3,6 +3,7 @@
     [config]="applicationConfig"
     [(state)]="applicationState"
 >
+<div #topAnchor class="top"></div>
 <div *ngIf="redirectToPublicMobile() && isIncidentsPage(); else mainPage">
   <router-outlet></router-outlet>
 </div>
