--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'material';
 @import 'variables';
 @import 'base';
+@import 'fab';
 @import 'component/landing-page';
 @import 'component/list';
 @import 'component/message-dialog';
