Add clearance at footer of tab-group

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -50,7 +50,8 @@
   background: #f3f6f9;
   @media (max-width: 768px) {
       background: white !important;
-  }  
+  }
+  padding-bottom: 60px;
 }
 
 :host ::ng-deep .mat-tab-label {
