--- a/client/wfnews-war/src/main/angular/src/app/components/common/scroll-to-top-button/scroll-to-top.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/scroll-to-top-button/scroll-to-top.component.html
@@ -1,5 +1,6 @@
 <div>
-    <button class="mat-white bottom-right animations" [ngClass]="{'show': isButtonVisible, 'hide': !isButtonVisible}"  mat-fab (click)="onScrollToTop()">
+    <button mat-fab class="mat-white-48 bottom-right animations"
+        [ngClass]="{'show': isButtonVisible, 'hide': !isButtonVisible}" (click)="onScrollToTop()">
         <mat-icon>expand_less</mat-icon>
     </button>
 </div>
