--- a/client/wfnews-war/src/main/angular/src/styles/_fab.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/_fab.scss
@@ -8,9 +8,32 @@
         }
     }
 }
-
 @include mat-fab-('primary', $colour-button-primary, $colour-white);
-@include mat-fab-('white', $colour-white, $colour-dark-grey);
+
+@mixin mat-fab-px-($name, $size, $background-colour, $colour) {
+    button.mat-fab.mat-#{$name}-#{$size} {
+        background-color: $background-colour;
+        color: $colour;
+        width: $size + px;
+        height: $size + px;
+
+        .mat-button-wrapper {
+            padding: $size / 6 + px;
+        }
+        
+        &:not([disabled]).intermediate-action {
+            background-color: $colour-intermediate-action;
+        }
+    }
+}
+@include mat-fab-px-('white', 48, $colour-white, $colour-dark-grey);
+
+button.mat-mini-fab.bottom-right {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    z-index: 1000;
+}
 
 button.mat-fab.bottom-right {
     position: fixed;
