WFNEWS-1204 : Create a component for scrolling to top on mobile (#782)
* Create white fab

* Reusable scroll to top button

* Add clearance at footer of tab-group

* Remove unused import

* Fix button sizing and tab location

* Clean up unused import

* Clean up

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/public-incident-page.component.scss
@@ -51,6 +51,8 @@
   @media (max-width: 768px) {
       background: white !important;
   }
+
+  padding-bottom: 60px;
 }
 
 :host ::ng-deep .mat-tab-label {
