--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-images-mobile/incident-gallery-images-mobile.component.scss
@@ -3,7 +3,7 @@
     height: 24px;
     background-color: rgba(255, 255, 255, 0);
     box-sizing: border-box;
-    font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue", sans-serif;
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
     font-weight: 500;
     color: #333333;
     text-align: left;
@@ -14,7 +14,7 @@
     height: 24px;
     background-color: rgba(255, 255, 255, 0);
     box-sizing: border-box;
-    font-family: "HelveticaNeue", "Helvetica Neue", sans-serif;
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
     color: #6e6e6e;
     text-align: left;
     line-height: 24px;
