--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.scss
@@ -43,6 +43,7 @@
 .incident-details {
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
   padding: 24px;
+  padding-bottom: 0px;
   .header {
     text-align: right;
     display: flex;
@@ -54,6 +55,7 @@
   .title-bar {
     .title {
       font-size: 1.6rem;
+      line-height: 39px;
       color: #003366;
       display: flex;
       flex-direction: row;
@@ -144,7 +146,6 @@
     color:#6e6e6e;
     font-size: 14px;
     display: flex;
-    justify-content: space-between;
     // .item{
     //   margin-right: 26px;
     // }
@@ -164,7 +165,9 @@
       box-sizing: border-box;
       align-items: center;
       justify-content: center;
-      width: 160px;
+      margin-right: 24px;
+      min-width: 130px;
+      height: 48px;
     }
   }
 }
@@ -172,6 +175,13 @@
 .mobile-label {
   color: #6e6e6e;
   font-size: 14px;
+  line-height: 21px;
+}
+
+.label-grid {
+  display: grid;
+  grid-template-columns: 1.1fr 7px 1fr;
+  column-gap: 7px;
 }
 
 @media (max-width: 768px) {
